# graphbolt

./: .gitignore  CMakeLists.txt
apps/: CF.C  PageRank.C  SSSP.C
core/: main.h
core/common/: parallel.h
core/graph/: IO.h
core/graphBolt/: GraphBoltEngine.h  GraphBoltEngine_simple.h  ingestor.h
inputs/: sample_graph.adj.un
